syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package NFdbBase;

enum FdbCryptoAlgorithm
{
    CRYPTO_NONE = 1;
    CRYPTO_AES128 = 2;
    CRYPTO_AES192 = 3;
    CRYPTO_AES256 = 4;
    CRYPTO_RSA1024 = 5;
    CRYPTO_RSA2048 = 6;
    CRYPTO_RSA3072 = 7;
    CRYPTO_ECC160 = 8;
    CRYPTO_ECC224 = 9;
    CRYPTO_ECC256 = 10;
}

message FdbMsgTokens
{
    repeated string tokens = 1;
    required FdbCryptoAlgorithm crypto_algorithm = 2;
}

